--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="connect_button_search">Search again</string>
     <string name="devices_acquainted">Already Connected Devices:</string>
     <string name="devices_found_new">Devices Found In Scan:</string>
+
+    <string name="menu_reset">Reset connection</string>
 </resources>
