--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
 
     <string name="connect_status_searching">Searching for devices…</string>
     <string name="connect_status_stopped">Search timeout.</string>
+    <string name="connect_status_connecting">Connecting to a device…</string>
+    <string name="connect_status_connection_failed">Failed to connect.</string>
     <string name="connect_button_search">Search again</string>
     <string name="devices_acquainted">Already Connected Devices:</string>
     <string name="devices_found_new">Devices Found In Scan:</string>
