--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="connect_button_search">Search again</string>
     <string name="devices_acquainted">Already Connected Devices:</string>
     <string name="devices_found_new">Devices Found In Scan:</string>
+    <string name="button_discover_services"><![CDATA[Discover services >]]></string>
 </resources>
