--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="timestamp">Timestamp</string>
     <string name="button_normal_view">Normal View</string>
     <string name="button_connect_hrm">Connect to HRM ></string>
+    <string name="button_discover_services">Discover services ></string>
+    <string name="button_start_receiving">Start receiving data ></string>
 
     <string name="connect_status_searching">Searching for devices…</string>
     <string name="connect_status_stopped">Search timeout.</string>
@@ -43,5 +45,4 @@
     <string name="connect_button_search">Search again</string>
     <string name="devices_acquainted">Already Connected Devices:</string>
     <string name="devices_found_new">Devices Found In Scan:</string>
-    <string name="button_discover_services"><![CDATA[Discover services >]]></string>
 </resources>
