--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -20,12 +20,12 @@
 
 <!--    <string name="message_on_button_click">App button clicked</string>-->
 
-<!--    <string name="status_default">No Status</string>-->
-<!--    <string name="status_connected">Connected</string>-->
-<!--    <string name="status_disconnected">Disconnected</string>-->
-<!--    <string name="status_running">Running</string>-->
-<!--    <string name="status_stopped">Stopped</string>-->
-<!--    <string name="status_no_support">Not supported</string>-->
+    <string name="status_default">No Status</string>
+    <string name="status_connected">Connected</string>
+    <string name="status_disconnected">Disconnected</string>
+    <string name="status_running">Running</string>
+    <string name="status_stopped">Stopped</string>
+    <string name="status_no_support">Not supported</string>
 
 <!--    <string name="reset">Reset from Wear starting</string>-->
 <!--    <string name="wear_running">Wear currently running</string>-->
@@ -42,6 +42,7 @@
 <!--    <string name="devices_acquainted">Already Connected Devices:</string>-->
 <!--    <string name="devices_found_new">Devices Found In Scan:</string>-->
 
+    <string name="status_container_title">Status</string>
     <string name="ecg_plot_title">25 mm/s, 10 mm/mV</string>
 
     <string name="device_id_label">Device ID</string>
@@ -70,6 +71,17 @@
     <string name="device_id_item">Set Device ID</string>
     <string name="settings_item">Settings</string>
     <string name="help_item">Help</string>
+
+    <string name="button_ppg_green">PPG Green</string>
+    <string name="button_ppg_ir">PPG IR</string>
+    <string name="button_ppg_red">PPG Red</string>
+
+    <string name="ppg_green_status">PPG Green\n%1$s</string>
+    <string name="ppg_ir_status">PPG IR\n%1$s</string>
+    <string name="ppg_red_status">PPG Red\n%1$s</string>
+    <string name="ecg_status">ECG\n%1$s</string>
+    <string name="status_ok">OK</string>
+    <string name="status_bad">Bad</string>
 
     <!-- Plots -->
     <string name="label_hr">Heart Rate: </string>
