--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -65,11 +65,12 @@
     <string name="save_data_item">Save Data</string>
     <string name="save_plot_item">Save Plot</string>
     <string name="save_both_item">Save Data &amp; Plot</string>
-    <string name="save_all_item">Save All</string>
+    <string name="save_all_item">Save All Data</string>
     <string name="save_ecg_data_item">Save ECG Data</string>
     <string name="save_ppg_green_data_item">Save PPG Green Data</string>
     <string name="save_ppg_ir_data_item">Save PPG IR Data</string>
     <string name="save_ppg_red_data_item">Save PPG Red Data</string>
+    <string name="save_all_ppg_data_item">Save All PPG Data</string>
     <string name="save_device_data_item">Save Device HR Data</string>
     <string name="save_qrs_data_item">Save Calculated HR Data</string>
     <string name="choose_data_directory_item">Set Data Directory</string>
