allow hide plot

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -118,6 +118,18 @@
     <string name="device_id_summary">Polar device ID or MAC address</string>
     <string name="patient_name_title">Patient Name</string>
     <string name="patient_name_summary">Patient name for ECG image file</string>
+    <string name="ppg_green_visibility_title">PPG Green Plot Visibility</string>
+    <string name="ppg_green_visibility_summary_on">PPG Green plot will be shown</string>
+    <string name="ppg_green_visibility_summary_off">PPG Green plot will not be shown</string>
+    <string name="ppg_ir_visibility_title">PPG IR Plot Visibility</string>
+    <string name="ppg_ir_visibility_summary_on">PPG IR plot will be shown</string>
+    <string name="ppg_ir_visibility_summary_off">PPG IR plot will not be shown</string>
+    <string name="ppg_red_visibility_title">PPG Red Plot Visibility</string>
+    <string name="ppg_red_visibility_summary_on">PPG Red plot will be shown</string>
+    <string name="ppg_red_visibility_summary_off">PPG Red plot will not be shown</string>
+    <string name="ecg_visibility_title">ECG Plot Visibility</string>
+    <string name="ecg_visibility_summary_on">ECG plot will be shown</string>
+    <string name="ecg_visibility_summary_off">ECG plot will not be shown</string>
     <string name="analysis_visibility_title">Analysis Visibility</string>
     <string name="analysis_visibility_summary_on">Analysis plots will be shown</string>
     <string name="analysis_visibility_summary_off">Analysis plots will not be shown</string>
